<resources>
    <string name="app_name">Genie</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="MainProgressDialogAuthenticatingMessage">Authenticating..</string>
    <string name="WarningDialogTitle">Warning</string>
    <string name="MainAlertDialogTitle">Error</string>
    <string name="OKAlertBtn">OK</string>
    <string name="CancelAlertBtn">Cancel</string>
    <string name="ExitAlertBtn">Exit</string>
    <string name="DoneAlertBtn">Done</string>
    <string name="ProgressDialogTitle">Please wait</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">Loading</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <!-- Registration -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="sex">Sex</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="diabetes_type">Diabetes Type</string>
    <string name="phonenumber">Phone Number</string>
    <string name="personal_info">Personal Information</string>
    <string name="address">Address</string>
    <string name="address_info">Address Information</string>
    <string name="mobile">Mobile</string>
    <string name="zipcode">Zip Code</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>


    <string name="date_of_test">Date of Test</string>
    <string name="time_of_test">Time of Test</string>


    <string name="female_choice">Female</string>
    <string name="male_choice">Male</string>
    <string name="title_activity_intro_screen">IntroScreenActivity</string>
    <string name="title_activity_reports">Reports</string>

    <!-- Login -->
    <string name="login_activity_title">Login</string>
    <string name="login_btn">Login</string>
    <string name="not_registered_login">Not registered? Login</string>

    <string name="logout">Sign out</string>
    <string name="help">Help</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>

    <string name="notes">Notes</string>
</resources>
